src/App.css
.money {
  color: #18AD00;
}

.quantity {
  color: yellow;
}

.App {
  background-color: #6495ED;
  position: relative;
  padding: 1.12rem;
  width: 100%;
  height: 100%;
  min-width: 24.5rem;
  min-height: 53.12rem;
}

.container {
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

header {
  display: flex;
  flex-direction: column;
  align-items: center;
}

header h1 {
  color: #FFFFFF;
}

header p {
  margin-top: 0.625rem;
  color: #E6E6FA;
  font-size: 0.875rem;
}

.display {
  margin-top: 1.18rem;
  background-color: rgba(198, 239, 206, 78%);

  display: flex;
  width: 22.31rem;
  height: 2.81rem;
  border-radius: 0.625rem;

  align-items: center;
  justify-content: space-between;
  padding-left: 1.25rem;
  padding-right: 1.25rem;

  box-shadow: 1px 2px 1px 2px rgba(0, 0, 0, 0.2);
}

.line1 {
  width: 100%;
  height: 2px;
  margin-top: 2rem;
  background-color: #000000;
}

.addProduct {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  margin-top: 1.8rem;

  min-width: 22.3em;

  height: 11.438rem;
  
  background-color: #C6EFCE;
  border-radius: 0.313rem;
}

.addProduct p {
  font-size: 20px;
  margin-top: 0.5rem;
  margin-bottom: 0.3rem;
}

.productName {
  margin-bottom: 0.563rem;
  margin-top: 0.438rem;
  width: 100%;
  padding-left: 5.5%;
  padding-right: 5.5%;
}

.productName input {
  width: 100%;
  height: 2rem;
}

.priceAndQuantity {
  width: 100%;
  padding-left: 1.25rem;
  padding-right: 1.25rem;
  margin-bottom: 1.20rem;
}

input {
  border-radius: 0.625rem;
  border: none;
  padding-left: 1rem;
}

#quantity {
  width: 41%; 
  height: 2rem;
}

#price {
  width: 10.875rem;
  height: 2rem;
  margin-left: 0.625rem;
  
}

.addProductButtons {
  display: flex;
  width: 88%;
  height: 2rem;
  align-items: center;
  justify-content: space-around;
}

.addProductButtons > button {
  width: 29%;
  height: 2rem;
  border-radius: 0.625rem;
  cursor: pointer;
}

#clear {
  background-color: #FFEB9C; 
  color: #9C5700;
  border: none;
}

#add {
  background-color: #FFF;
  color: #18AD00;
  border: solid 1px #18AD00;
}

.line2 {
  width: 100%;
  height: 2px;
  margin-top: 1.5rem;
  margin-bottom: 0.625rem;
  background-color: #000000;
}

main {

  display: flex;
  flex-direction: column;
}

main h2 {
  color: #FFFFFF;
  align-self: center;
  margin-bottom: 0.625rem;
}

.productsList {
  display: flex;
  flex-direction: column;
  color: #FFFFFF;
  border-top: 1px solid #000000;
  font-size: 1.25rem;
  gap: .2rem;
  
  padding: .8rem;

  margin: .8rem;

  background-color: rgba(198, 239, 206, .8);
  
  border-radius: 1rem;
}

.nameAndButton {
  display: flex;
  justify-content: space-between;
  padding-bottom: 0.5rem;
  border-bottom: 1px solid #000000;
}

.qntPriceTotal {
  display: flex;
  justify-content: space-between;
}

.gridItemName {
  width: 13.5rem;
}

.gridItemName p {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  color: #000000;
}

.removeProduct {
  width: 6em;
  border: none;
  border-radius: 1.5rem;
  background-color: #FFC7CE;
  color: #C00000;
}

.footer {
  display: flex;
  align-self: center;
  width: 20em;
  height: 2rem;
  background-color: #FFC7CE;
  border-radius: 0.625rem;
  justify-content: center;
  align-items: center;
  margin-top: 1em;
}

.footer button {
  color: #C00000;
  border: none;
  background-color: transparent;
  width: 100%;
  height: 100%;
}

footer {
  position: absolute;
  bottom: 0;
  padding: .5rem;
  margin: 1rem;
  border-radius: 1rem;
  width: 10rem;
  background-color: rgba(0, 0, 0, 0.8);
  cursor: pointer;
}

footer a {
  display: flex;
  justify-content: center;
  text-decoration: none;
  color: #FFFFFF;
  width: 100%;
}

@media only screen and (max-width: 356px) {
  .App {
    min-height: 75rem;
  }
}

@media only screen and (min-width: 550px) {
  .App {
    width: 34.375rem;
    margin: auto;
    border: solid 3px #000000;
    border-radius: 1rem;
    box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.6);
  }

  body {
    background-image: url('./assets/shopping-cart-background.jpg');
    padding: 2rem 0;
  }
}

